--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
 }
 
-.logo>.mobile {
+.logo-mobile {
     display: none;
 }
 a {
@@ -27,39 +27,40 @@ a {
     background-color: #ffee00;
     display: flex;
     justify-content: space-between;
-    padding-inline: 1.875rem;
-    height: 2.8125rem;
+    height: 45px;
+    padding-inline: 20px;
     position: sticky;
     top: 0;
+    z-index: 500;
 }
 .nav>a {
     display: flex;
 }
-.nav>a>.logo {
+.logo {
     display: flex;
     align-items: center;
 }
-.nav>a>.logo>p {
+.logo>p {
     font-family: Onest;
     font-weight: 800;
-    font-size: 1.25rem;
-    padding-left: 0.9375rem;
+    font-size: 20px;
+    padding-left: 15px;
     color: black;
     margin: 0;
 }
 .nav>a>div>img {
-    height: 1.5625rem;
-    width: 1.5625rem;
+    height: 25px;
+    width: 25px;
 }
-.nav>.desktop {
+.nav-desktop {
     display: flex;
     align-content: center;
     height: 100%;
 }
-.nav>.desktop>ul {
+.nav-desktop>ul {
     font-family: Onest;
     font-weight: bold;
-    font-size: 0.75rem;
+    font-size: 12px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -68,36 +69,103 @@ a {
     display: flex;
     position: relative;
 }
-.nav>.desktop>ul>a {
+.nav-desktop>ul>a {
     display: flex;
-    padding-inline: 0.75rem;
+    padding-inline: 12px;
     height: 100%;
     align-items: center;
     color: black;
     transition: 0.3s;
 }
-.nav>.desktop>ul>a:hover {
+.nav-desktop>ul>a:hover {
     background-color: #ffe600;
     transition: 0.3s;
 }
-.nav>.mobile, .nav>.mobile>ul {
+.nav-mobile, .nav-mobile>ul {
     display: none;
 }
-
-@media (max-width: 700px) {
+/* Основная часть сайта */
+.content {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+}
+.content-center {
+    display: grid;
+    margin: 16px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    position: sticky;
+    top: 61px;
+}
+.content-left-pan,
+.content-right-pan {
+    height: 160px;
+    background-color: rgba(0, 0, 0, 0.1);
+    margin: 6px;
+    position: sticky;
+    top: 61px;
+    border-radius: 16px;
+}
+.content-left-pan {
+    margin-right: 0;
+}
+.content-right-pan {
+    margin-left: 0;
+}
+.announcement {
+    display: grid;
+    height: auto;
+    width: 95%;
+    margin-top: 8px;
+    background-color: red;
+    border-radius: 10px;
+    justify-self: center;
+}
+.announcement>p {
+    font-family: Onest;
+    font-weight: 800;
+    font-size: 24px;
+    margin: 0;
+    padding: 0;
+    padding: 8px;
+    text-align: center;
+    align-self: center;
+}
+.last-match {
+    display: grid;
+    flex-direction: column;
+    justify-self: center;
+    justify-content: center;
+    margin-block: 16px;
+    margin-inline: 14px;
+}
+.last-match>p {
+    font-family: Onest;
+    font-weight: 800;
+    font-size: 24px;
+    margin: 0;
+}
+iframe {
+    border-radius: 8px;
+}
+.last-match>a {
+    display: none;
+}
+/* Нав. панель */
+@media (max-width: 768px) {
     .nav {
         padding-inline: 0;
-        padding-left: 12px;
+        padding-left: 11.25px;
     }
-    .nav>.desktop {
+    .nav-desktop {
         display: none;
     }
-    .nav>.mobile {
+    .nav-mobile {
         display: block;
     }
     .burger>img {
         height: 50%;
-        width: 100%
+        width: 100%;
     }
     .burger {
         display: flex;
@@ -107,36 +175,74 @@ a {
         height: 100%;
         cursor: pointer;
         background-color: #ffee00;
-        width: 2.8125rem;
+        width: 45px;
     }
-    .nav>.mobile:hover ul {
+    .nav-mobile:hover ul {
         display: block;
         font-family: Onest;
         font-weight: bold;
-        font-size: 0.75rem;
+        font-size: 12px;
         list-style: none;
         margin: 0;
-        margin-right: -0.75rem;
+        margin-right: -12px;
         padding: 0;
         height: 100%;
         align-items: center;
         position: absolute;
         right: 12px;
     }
-    .nav>.mobile:hover ul>a {
+    .nav-mobile:hover ul>a {
         display: flex;
         background-color: #ffee00;
-        padding-inline: 0.75rem;
+        padding-inline: 12px;
         height: 100%;
         align-items: center;
         color: black;
     }
 }
 @media (max-width: 450px) {
-    .logo>.mobile {
+    .logo-mobile {
         display: block;
     }
-    .logo>.desktop {
+    .logo-desktop {
         display: none;
+    }
+}
+/* Основная часть сайта */
+@media (max-width: 768px) { 
+    .content-left-pan,
+    .content-right-pan {
+        display: none;
+    }
+    .content {
+        grid-template-columns: 1fr;
+    }
+    iframe {
+        width: auto;
+        height: auto;
+    }
+    .last-match>p {
+        font-size: 16px;
+    }
+}
+@media (max-width: 450px) { 
+    iframe {
+        width: 200px;
+        height: 100px;
+    }
+}
+@media (max-width: 250px) {
+    .last-match>iframe {
+        display: none;
+    }
+    .last-match>a, .last-match>a>img {
+        display: flex;
+        width: 150px;
+    }
+    .last-match>a {
+        justify-self: center;
+    }
+    .announcement>p {
+        font-size: 18px;
     }
 }
