--- a/css/nav.css
+++ b/css/nav.css
@@ -38,7 +38,7 @@
     align-items: center;
 }
 .logo>p {
-    font-family: Onest;
+    font-family: Onest, ui-sans-serif;
     font-weight: 800;
     font-size: 20px;
     padding-left: 15px;
@@ -55,7 +55,7 @@
     height: 100%;
 }
 .nav-desktop>ul {
-    font-family: Onest;
+    font-family: Onest, ui-sans-serif;
     font-weight: bold;
     font-size: 12px;
     list-style: none;
@@ -66,7 +66,10 @@
     display: flex;
     position: relative;
 }
-.nav-desktop>ul>a {
+.nav-desktop>ul>li {
+    height: 100%;
+}
+.nav-desktop>ul>li>a {
     display: flex;
     padding-inline: 12px;
     height: 100%;
@@ -74,7 +77,7 @@
     color: black;
     transition: 0.3s;
 }
-.nav-desktop>ul>a:hover {
+.nav-desktop>ul>li>a:hover {
     background-color: #ffe600;
     transition: 0.3s;
 }
@@ -85,7 +88,7 @@
 @media (max-width: 768px) {
     .nav {
         padding-inline: 0;
-        padding-left: 11.25px;
+        padding-left: 11.5px;
     }
     .nav-desktop {
         display: none;
@@ -108,7 +111,7 @@
         width: 45px;
     }
     .nav-mobile>ul {
-        font-family: Onest;
+        font-family: Onest, ui-sans-serif;
         font-weight: bold;
         font-size: 12px;
         list-style: none;
@@ -120,13 +123,14 @@
         position: absolute;
         right: 12px;
     }
-    ul>a {
+    .nav-mobile>ul>li>a {
         display: flex;
         background-color: #ffee00;
         padding-inline: 12px;
         height: 100%;
         align-items: center;
         color: black;
+        padding-block: 13.5px;
     }
 }
 @media (max-width: 450px) {
