--- a/css/nav.css
+++ b/css/nav.css
@@ -17,7 +17,7 @@
     display: block;
 }
 
-.nav {
+.main-nav {
     background-color: #ffee00;
     display: flex;
     justify-content: space-between;
@@ -27,7 +27,7 @@
     top: 0;
     z-index: 500;
 }
-.nav>a {
+.main-nav>a {
     display: flex;
 }
 .logo-mobile {
@@ -45,7 +45,7 @@
     color: black;
     margin: 0;
 }
-.nav>a>div>img {
+.main-nav>a img {
     height: 25px;
     width: 25px;
 }
@@ -86,7 +86,7 @@
 }
 
 @media (max-width: 768px) {
-    .nav {
+    .main-nav {
         padding-inline: 0;
         padding-left: 11.5px;
     }
