--- a/css/nav.css
+++ b/css/nav.css
@@ -116,8 +116,7 @@
     font-weight: bold;
     font-size: 12px;
     list-style: none;
-    margin: 0;
-    margin-right: -12px;
+    margin: 0 -12px 0 0;
     padding: 0;
     height: 100%;
     align-items: center;
