--- a/css/content.css
+++ b/css/content.css
@@ -28,7 +28,9 @@
   font-weight: 800;
   font-size: 24px;
   text-align: center;
-  margin: 5px;
+  margin-block: 5px;
+  margin-inline: 10px;
+
 }
 
 .panel-center__last-match {
